style.css
/*! Root custom properties */
:root {
  --main-bg: #dbdbd3;
  --secondary-bg: #029788;
  --msg-bar: #f3eeea;
  --up-bar: #eaeaea;
  --blue-bar: #8edafc;
  --bbb: 1px dashed red;
  --msg-sent: #d5f9ba;
}

/* General */

body {
  background-image: linear-gradient(
    var(--secondary-bg) 20%,
    var(--main-bg) 20%
  );
}
main {
  height: 90vh;
  flex-basis: 100%;
}
.avatar {
  border-radius: 50%;
  height: 40px;
}
a {
  color: grey;
}

/** Main CSS */
#user-bar {
  background-color: var(--up-bar);
}
/* info bar */
#info-bar {
  background-color: var(--blue-bar);
}
.fa-circle {
  color: white;
}
.fa-bell-slash {
  color: var(--blue-bar);
}
/* left search bar */
#searchbar-container {
  background-color: var(--msg-bar);
}
.my-input-group-text {
  border-radius: 5px 0 0 5px;
  background-color: white;
  border: none;
  padding: 0;
}

.my-search-bar {
  border-radius: 0 5px 5px 0;
  border: none;
  box-shadow: none;
  background-color: white;
}

.my-input-group-text i {
  padding: 0.5rem;
  background-color: white;
  color: #888;
}

/* contacts */
#contacts {
  background-color: white;
  flex-grow: 1;
  overflow-y: auto;
}

/* Messages section */

/* message bar */
#upper-msg-bar {
  background-color: var(--up-bar);
}
/* messages style */
.message-item {
  display: flex;
}
.message-item.sent {
  justify-content: flex-end;
}
.message {
  padding: 10px;
  border-radius: 8px;
  font-size: 14px;
  margin: 10px;
}

.message.received {
  background-color: white;
}

.message.sent {
  background-color: var(--msg-sent);
}
.txt-sm {
  font-size: smaller;
}
.small-text {
  color: gray;
  font-size: smaller;
}
#chat-container {
  flex-grow: 1;
  overflow-y: hidden;
  background-image: url(img/mine.jpg);
}
#lower-msg-bar {
  background-color: var(--msg-bar);
}

